<resources>
    <string name="app_name">SMAC Cloud</string>
    <string name="tra_demo">Try a Demo</string>
    <string name="configure_url">Configure URL</string>
    <string name="start_demo">Start Demo</string>
    <string name="organization_name">Organization</string>
    <string name="organization_url">Organization URL</string>
    <string name="organization_url_info">Enter your organization URL from greeting email</string>
    <string name="invalid_organization">Invalid Organization</string>
    <string name="Continue">Continue</string>
    <string name="enter_Organization_name">Enter Organization Name</string>
    <string name="invalid_email">Please Enter Valid Email</string>
    <string name="select_any_profession">Select any profession</string>
    <string name="hint_email">Email Id</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_select_first">Please Select First</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="help_login">Need help logging in?</string>
    <string name="email_sent_successfully">Email Sent Successfully</string>
    <string name="password_length_message">Password must requires at least six characters</string>
    <string name="recognizing_and_sending_mail">Recognizing and sending mail…</string>
    <string name="authentication">Authentication</string>
    <string name="forgot_password_success_message1">If a SMAC Cloud account exist for </string>
    <string name="forgot_password_success_message2"> an e-mail will be sent with further instructions.</string>
    <string name="msg_please_check_your_connection">No internet connection</string>
    <string name="u_name">Name</string>
    <string name="address">Address</string>
    <string name="contact">Contact No</string>
    <string name="mobileNo">Mobile No</string>
    <string name="designation">Designation</string>
    <string name="occupation">Occupation</string>
    <string name="Professional_field">Professional field</string>
    <string name="company_size">Company Size</string>
    <string name="work_email_address">Work email address</string>
    <string name="enter_email">Enter Email</string>
    <string name="newsLetters">Newsletters?</string>
    <string name="select_country">select country</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_occupation">Enter Occupation</string>
    <string name="enter_company_type">Enter Company Type</string>
    <string name="enter_employee_strength">Enter Employee Strength</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="name_validation">Please enter username</string>
    <string name="emailId_validation">Please Enter Email </string>
    <string name="address_validation">Please enter address</string>
    <string name="contact_validation">Please Enter contactNo</string>
    <string name="mobileNo_validation">Please Enter MobileNo</string>
    <string name="contactNo_validation">Please Enter ContactNo</string>
    <string name="organization_validation">Please enter organization name</string>
    <string name="password_validation">Please Enter password</string>
    <string name="confirm_password_validation">Please confirm the password</string>
    <string name="invalidMobileNo_validation">Mobile number should be 10 to 15 character long.</string>
    <string name="password_spacial_character_validation">Password must be 8 characters long and at least one letter, one special character and one number.</string>
    <string name="organization_detail_message">The required details have been sent to your Email. Please log in using that info and use all cool features. </string>
    <string name="sync">Synchronize your data </string>
    <string name="sync_sub_title_select_download">Select your download criteria</string>
    <string name="switch_views">Switch Views</string>
    <string name="download_option">Download Options</string>
    <string name="sync_data">Synchronizing the data</string>
    <string name="text_full_download">Full Download</string>
    <string name="auto_download_hint">Tap on it to download files Automatically.</string>
    <string name="download_on_demand_hint">Tap on it to download files manually.</string>
    <string name="download_everything_now">Download everything now</string>
    <string name="download_on_demand">Download on Demand</string>
    <string name="label_auto_download">Auto Download</string>
    <string name="download_on_tap">Download on tap</string>
    <string name="download_file_contains">Download  file contains</string>
    <string name="download">Download</string>
    <string name="text_quick_download">Quick Download</string>
    <string name="text_info_full_download">YMay take a long time if there a lot of content</string>
    <string name="text_info_quick_download">You can sync your data and download files manually</string>
    <string name="all_download">All Download</string>
    <string name="battery_low_message">Battery low, please charge it.</string>
    <string name="no_available_space_message">Not enough space available for the download.</string>
    <string name="app_title">SMAC</string>
    <string name="download_message">Do you want to download</string>
    <string name="download_message1">of data your Device?</string>
    <string name="download_message2">Available memory</string>
    <string name="msg_please_wait_while_sync">Please wait while we synchronize</string>
    <string name="sync_latest_data_from_server">Please update your content, sync latest data from server!</string>
    <string name="user_agreement_msg1">You agree to the SMAC Cloud</string>
    <string name="user_agreement_msg2">User Agreement</string>
    <string name="user_agreement_msg3"> Privacy Policy</string>
    <string name="and">and</string>
    <string name="gcm_sender_id">645815223505</string>
    <string name="current_password">Current Password</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_change">Change</string>
    <string name="current_password_validation_message"> Enter current Password</string>
    <string name="new_password_validation_message">Enter New Password</string>
    <string name="confirm_password_validation_message">Enter Confirm Password</string>
    <string name="password_mismatch_validation_message">Confirm password does not match</string>
    <string name="enter_old_password">Old Password</string>
    <string name="enter_New_password">New Password</string>
    <string name="enter_confirm_password">Confirm New Password</string>
    <string name="change_password_message">your password has been changed successfully</string>
    <string name="change_password_database_message">Email address is not available in database</string>
    <string name="label_password">Password</string>
    <string name="label_search">Search</string>
    <string name="label_reset">Reset</string>
    <string name="label_file_types">File types</string>
    <string name="label_all">All</string>
    <string name="label_channels">Channels</string>
    <string name="txt_configure_filter">Configure Filter</string>
    <string name="label_sharing">Sharing</string>
    <string name="label_sharing1">SHARING</string>
    <string name="label_account">ACCOUNT</string>
    <string name="label_login_setting">Login</string>
    <string name="label_sign_up_setting">Sign Up</string>
    <string name="label_email_body">Email Body</string>
    <string name="label_cc_address">CC </string>
    <string name="label_bcc_address">BCC </string>
    <string name="label_signature">Signature</string>
    <string name="label_signature_msg">Your Filed Is Empty</string>
    <string name="label_pick_image">Pick Image</string>
    <string name="label_updates">Updates</string>
    <string name="label_synchronization">SYNCHRONIZATION</string>
    <string name="title_synchronization">Synchronization</string>
    <string name="label_synchronize_now">Synchronize Now</string>
    <string name="sync_update_dialog">Are you sure you want to synchronize?</string>
    <string name="sync_data_update_successfully">Your data has been updated!</string>
    <string name="label_download_contains">Download Contents</string>
    <string name="label_set_schedule">Set Schedule</string>
    <string name="label_information">INFORMATION</string>
    <string name="label_storage">Storage</string>
    <string name="label_terms">Terms</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_privacy_policy_description">The protection of your personal data is very important for us. You can therefore use the website of SMAC Software &#38; Services. without having to disclose personal information. However, as is the case with all Internet sites, our web server will temporarily record the domain name or IP address of the user’s computer, client file requests, http response codes and the Internet page that has transferred you to us. However, this information will not be used for person-related analyses.
Name, address and other personal data will only be required if you provide them voluntarily, for example when ordering our product or making individual inquiries. These data will not be disclosed to third parties or used for purposes other than those stated in the respective documents.
</string>
    <string name="label_open_source_libraries">Open-source libraries</string>
    <string name="label_help">Help</string>
    <string name="label_about_us">About Us</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="label_cc">CC</string>
    <string name="label_bcc">BCC</string>
    <string name="label_subject">Subject</string>
    <string name="label_compose_email">Compose email</string>
    <string name="label_attachment">Attachments</string>
    <string name="keep_downloaded_files">Keep downloaded files</string>
    <string name="delete_downloaded_files">Delete downloaded files</string>
    <string name="label_select_filter">Select Filter</string>
    <string name="label_select_file_type">Select File Type</string>
    <string name="label_select_channel">Select Channel</string>
    <string name="label_total_disk_space">Total Disk Space</string>
    <string name="label_used_disk_space">Used</string>
    <string name="label_free_disk_space">Available</string>
    <string name="label_media">MEDIA</string>
    <string name="label_used">Used</string>
    <string name="label_images">Images</string>
    <string name="label_videos">Videos</string>
    <string name="label_documents">Documents</string>
    <string name="label_space_used">Space Used</string>
    <string name="label_space_free">Space Free</string>
    <string name="label_byte">00 Byte</string>
    <string name="version">Version:</string>
    <string name="version_no">Version</string>
    <string name="na">N/A</string>
    <string name="copyright">CopyRight ©</string>
    <string name="copyright1">SMAC Software &#38; Services.All Rights Reserved.</string>
    <string name="plan">Plan:</string>
    <string name="licence">Licence:</string>
    <string name="smac_title">SMAC Cloud-2017</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="label_cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="channel_background">Channel background</string>
    <string name="select_all">Select ALL</string>
    <string name="assign_users_for_channel">Assign users for channel</string>
    <string name="save">Save</string>
    <string name="create_channel">Create Channel</string>
    <string name="cancel">Cancel</string>
    <string name="create_folder">Create Folder</string>
</resources>