<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/parentLayout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_very_small"
        android:layout_marginTop="@dimen/padding_very_small"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/title_small"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/Gray57"/>

    <TextView
        android:id="@+id/btn_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_very_small"
        android:layout_marginTop="@dimen/padding_very_small"
        android:gravity="center_horizontal"
        android:text="@string/user_agreement_msg2"
        android:textColor="@color/blue"
        android:textSize="@dimen/title_very_small"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/Gray57"/>

    <TextView
        android:id="@+id/btn_user_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_very_small"
        android:layout_marginTop="@dimen/padding_very_small"
        android:gravity="center_horizontal"
        android:text="@string/label_privacy_policy"
        android:textColor="@color/blue"
        android:textSize="@dimen/title_very_small"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:background="@color/Gray57"/>

    <TextView
        android:id="@+id/txt_user_agreement_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_very_small"
        android:layout_marginTop="@dimen/padding_very_small"
        android:gravity="center_horizontal"
        android:text="@string/label_cancel"
        android:textColor="@color/red"
        android:textSize="@dimen/title_very_small"
        android:visibility="visible"/>
</LinearLayout>